<resources>
    <string name="app_name" translatable="false">AnimalExchange</string>

    <string name="inventory_button">Inventory</string>
    <string name="walk_button">Walk</string>
    <string name="trade_button">Trade</string>
    <string name="ranking_button">Ranking</string>
    <string name="profile_button">Profile</string>
    <string name="help_button">Help</string>
    <string name="created_by">Created by frodegill@gmail.com</string>
    <string name="osmdroid_attribution">Based on osmdroid</string>

    <string name="domesticanimals_bronze">Domestic animals (bronze)</string>
    <string name="domesticanimals_silver">Domestic animals (silver)</string>
    <string name="domesticanimals_gold">Domestic animals (gold)</string>
    <string name="seaanimals_silver">Sea animals (silver)</string>
    <string name="seaanimals_gold">Sea animals (gold)</string>
    <string name="domesticbirds_silver">Domestic birds (silver)</string>
    <string name="domesticbirds_gold">Domestic birds (gold)</string>
    <string name="wildanimals_bronze">Wild animals (bronze)</string>
    <string name="wildanimals_silver">Wild animals (silver)</string>
    <string name="wildanimals_gold">Wild animals (gold)</string>
    <string name="exoticbirds_silver">Exotic birds (silver)</string>
    <string name="exoticbirds_gold">Exotic birds (gold)</string>
    <string name="exoticanimals_bronze">Exotic animals (bronze)</string>
    <string name="exoticanimals_silver">Exotic animals (silver)</string>
    <string name="exoticanimals_gold">Exotic animals (gold)</string>

    <string name="cat">Cat</string>
    <string name="dog">Dog</string>
    <string name="guinea_pig">Guinea pig</string>
    <string name="rabbit">Rabbit</string>
    <string name="donkey">Donkey</string>
    <string name="hamster">Hamster</string>
    <string name="pig">Pig</string>
    <string name="sheep">Sheep</string>
    <string name="horse">Horse</string>
    <string name="cow">Cow</string>
    <string name="shrimp">Shrimp</string>
    <string name="goat">Goat</string>
    <string name="crab">Crab</string>
    <string name="salmon">Salmon</string>
    <string name="tuna">Tuna</string>
    <string name="lobster">Lobster</string>
    <string name="hermitcrab">Hermit crab</string>
    <string name="hen">Hen</string>
    <string name="halibut">Halibut</string>
    <string name="turkey">Turkey</string>
    <string name="dove">Dove</string>
    <string name="duck">Duck</string>
    <string name="goose">Goose</string>
    <string name="squirrel">Squirrel</string>
    <string name="guineafowl">Guinea fowl</string>
    <string name="hare">Hare</string>
    <string name="peacock">Peacock</string>
    <string name="fox">Fox</string>
    <string name="hedgehog">Hedgehog</string>
    <string name="stoat">Stoat</string>
    <string name="moose">Moose</string>
    <string name="bear">Bear</string>
    <string name="deer">Deer</string>
    <string name="lynx">Lynx</string>
    <string name="boar">Boar</string>
    <string name="parakeet">Parakeet</string>
    <string name="wolf">Wolf</string>
    <string name="eagle">Eagle</string>
    <string name="ostrich">Ostrich</string>
    <string name="polarbear">Polarbear</string>
    <string name="falcon">Falcon</string>
    <string name="owl">Owl</string>
    <string name="parrot">Parrot</string>
    <string name="camel">Camel</string>
    <string name="kingfisher">Kingfisher</string>
    <string name="hippo">Hippo</string>
    <string name="eagle_owl">Eagle owl</string>
    <string name="lion">Lion</string>
    <string name="zebra">Zebra</string>
    <string name="giraffe">Giraffe</string>
    <string name="elephant">Elephant</string>
    <string name="leopard">Leopard</string>
    <string name="kangaroo">Kangaroo</string>
    <string name="rhino">Rhino</string>
    <string name="tiger">Tiger</string>
    <string name="panda">Panda</string>
    <string name="red_panda">Red panda</string>

    <string name="long_press_to_feed_animal">Long-press to feed animal</string>
    <string name="ack_feed_animal">Do you want to feed a %s?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="food">food:</string>
    <string name="speed">speed:</string>

</resources>
